@@ -33,6 +33,7 @@ To programs:
 
 * user/zdzhang: New contributor (Zhendong Zhang)
 * splitting auxiliary inputs in sfomp and sfmpi
+* set delrt in trace headers in sfsegywrite
 
 ===Bug fixes===
 
